# harvard-library-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  TESTING_GUIDE.md  claude.md  docker-compose.yml  pyproject.toml  test_comprehensive.py  test_mcp_inspector.py
.github/workflows/: ci.yml  release.yml
docs/: DEPLOYMENT.md
scripts/: setup-pypi-trusted-publishing.md
src/harvard_library_mcp/: __init__.py  config.py  http_server.py  server.py
src/harvard_library_mcp/api/: __init__.py  client.py
src/harvard_library_mcp/models/: __init__.py  harvard_models.py
src/harvard_library_mcp/tools/: __init__.py  search_tools.py
src/harvard_library_mcp/utils/: __init__.py  helpers.py
tests/: __init__.py  test_api_client.py  test_models.py  test_search_tools.py
